swish-0.7.2
-Added direct downloading and installation of updates.
-More detailed error messages.
-Fixed bug with non-ASCII characters in usernames and passwords.
-New Welsh, Danish, Greek, Estonian, Finnish and Korean translations.
-Updated Bulgarian, Czech, German, Spanish, French, Hebrew, Italian, Japanese,
 Dutch, Polish, Russian, Swedish and Chinese (Simplified) translations.

swish-0.7.0
-Added support for public key authentication through Pageant key agent.
-Updated Czech, Spanish, Japanese, Dutch and Portuguese (Brazil) translations.

swish-0.6.3
-Fixed errors with Windows 8.
-Disabled compression to support a greater range of SSH servers.
-Updated German, Italian, Japanese, Portuguese (Brazil), Chinese (Simplified),
 Chinese (Traditional) and French translations.

swish-0.6.2
-Fixed performance problems with small files.
-Fixed bug causing ZIP files to be unpacked as the were copied.
-New Brazilian Portuguese translation.
-Updated Dutch, German, Chinese (Simplified), Italian and Portuguese
 translations.

swish-0.6.1
-Significant speed improvement.
-Installer supports Windows 8.
-Better error reporting when copying to a remote server.
-Fixed bug where renaming a folder did not change the name displayed.
-Fixed bug where files did not appear after copying to remote server.
-Hindi, Bulgarian, Portuguese, Swedish and Chinese (Simplified) translations.

swish-0.6.0
-Added double-click file opening.
-Downgraded to libssh2 1.2.7 to fix incomplete file transfers.

swish-0.5.4
-Added support for symlinks.
-Display error message if drag-and-drop fails.
-Japanese, Polish, Slovak, Hungarian and Chinese translations.

swish-0.4.6
-Fixed major installer problem which broke all new installations as it failed
 to register an interface.
-Fixed problem that left assertion checks in release builds.

swish-0.4.5
-Added ability to create new folders.
-Added auto-updater.
-More useful error messages.
-Better error dialogues.